tests/integration/error/opaque_bare_return.alo
// expect-error: Opaque type 'Foreign' must be used by reference

extern type Foreign;

extern fun bad() -> Foreign;

fun main() -> void {
}
